InternexDev_Sandbox/src/objects/Cheque_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <externalId>true</externalId>
        <label>Batch Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Type__c</fullName>
        <label>Load Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cheque Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Batch Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>